# hyperhyper

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  pyproject.toml  setup.py  watch_remote.sh
.github/workflows/: ci.yml  publish.yml
bench/: bench_pair_counts.py  bench_svd.py  reference.py
bench/datagen/: README.md  compile_analogies.py
bench/datagen/pairs/: fr_capitals.tsv
docs/: usage.md
docs/adr/: 0001-evaluation-data-strategy.md  0002-tokenization-and-storage.md
docs/adr/references/: 0001-annex-codex-review.md  0001-annex-fable-review.md  0002-annex-codex-review.md  0002-annex-fable-review.md
examples/: 01_news.ipynb  02_wikipedia.ipynb  simple.ipynb
hyperhyper/: __init__.py  bunch.py  corpus.py  dataset.py  embedding.py  evaluation.py  experiment.py  pair_counts.py  pmi.py  preprocessing.py  svd.py  utils.py
hyperhyper/evaluation_datasets/da/ws/: ws353.tsv
hyperhyper/evaluation_datasets/de/: README.txt
hyperhyper/evaluation_datasets/de/analogy/: google.tsv  google.txt  open.tsv  open.txt  opposite.tsv  opposite.txt  parasem.tsv  parasem.txt
hyperhyper/evaluation_datasets/de/ws/: gur350.tsv  gur350.txt  gur65.tsv  gur65.txt  schm280.tsv  schm280.txt  simlex999.tsv  simlex999.txt  ws353rel.tsv  ws353rel.txt  ws353sim.tsv  ws353sim.txt  zg222.tsv  zg222.txt
hyperhyper/evaluation_datasets/en/analogy/: google.tsv  google.txt  msr.tsv  msr.txt
hyperhyper/evaluation_datasets/en/ws/: bruni_men.tsv  bruni_men.txt  luong_rare.tsv  luong_rare.txt  radinsky_mturk.tsv  radinsky_mturk.txt  ws353.tsv  ws353.txt  ws353_relatedness.tsv  ws353_relatedness.txt  ws353_similarity.tsv  ws353_similarity.txt
hyperhyper/evaluation_datasets/fr/analogy/: capitals.tsv  capitals.txt
hyperhyper/evaluation_datasets/sv/ws/: supersim_relatedness.tsv  supersim_similarity.tsv
tests/: conftest.py  test_bunch.py  test_dataset.py  test_datasets.py  test_domain_tasks.py  test_evaluation.py  test_pair_counts.py  test_pair_counts_equivalence.py  test_pmi.py  test_preprocessing.py  test_svd.py  test_utils.py
tools/build_domain_tasks/: README.md  build_domain_tasks.py
tools/import_eval_data/: README.md  import_ws.py
